--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@ng-bootstrap/ng-bootstrap": "4.2.1",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
+    "angular-cesium": "0.0.56",
     "bootstrap": "4.3.1",
+    "cesium": "^1.59.0",
     "core-js": "3.1.3",
     "moment": "2.24.0",
     "ng-jhipster": "0.10.1",
