--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "chai-as-promised": "7.1.1",
     "chai-string": "1.5.0",
     "codelyzer": "5.1.0",
-    "copy-webpack-plugin": "5.0.3",
-    "css-loader": "3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.0.0",
     "file-loader": "4.0.0",
     "fork-ts-checker-webpack-plugin": "1.3.6",
     "friendly-errors-webpack-plugin": "1.7.0",
     "generator-jhipster": "6.1.2",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "2.4.1",
     "jest": "24.8.0",
     "jest-junit": "6.4.0",
@@ -82,7 +82,7 @@
     "sass": "1.21.0",
     "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
-    "style-loader": "0.23.1",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "1.3.0",
     "thread-loader": "2.1.2",
     "to-string-loader": "1.1.5",
@@ -92,6 +92,7 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-loader": "3.5.4",
     "typescript": "3.4.5",
+    "url-loader": "^2.1.0",
     "webdriver-manager": "12.1.5",
     "webpack": "4.34.0",
     "webpack-cli": "3.3.4",
